# retro-doc

./: CHANGELOG.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: auto-assigner.yml  ci.yml
backend/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  prek.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/auth/: config.py  dependencies.py  oidc.py  router.py  schemas.py  service.py  tokens.py  utils.py
backend/app/auth/providers/: base.py  microsoft.py  registry.py
backend/app/chat/: config.py  dependencies.py  llm.py  models.py  prompts.py  router.py  schemas.py  service.py  sse.py  tools.py  vectorstore.py
backend/app/core/: blob_storage.py  config.py  database.py  language_enum.py  logger.py
backend/app/deep_analysis/: config.py  dependencies.py  llm.py  models.py  prompts.py  router.py  schemas.py  service.py  tools.py
backend/app/deep_analysis/pdf_template/: index.html
backend/app/docs/: models.py
backend/app/graphs/: models.py
backend/app/healthz/: router.py  schemas.py
backend/app/languages/: router.py  schemas.py  service.py
backend/app/pipeline/: config.py  models.py  service.py
backend/app/repos/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/users/: dependencies.py  models.py
backend/tests/unit/: conftest.py
backend/tests/unit/auth/: conftest.py  test_dependencies.py  test_oidc.py  test_providers_microsoft.py  test_router.py  test_schemas.py  test_service.py  test_tokens.py  test_utils.py
backend/tests/unit/chat/: conftest.py  test_dependencies.py  test_service.py  test_tools.py
backend/tests/unit/healthz/: test_router.py
backend/tests/unit/languages/: conftest.py  test_router.py  test_service.py
backend/tests/unit/pipeline/: conftest.py  test_service.py
backend/tests/unit/repos/: conftest.py  test_dependencies.py  test_router.py  test_service.py
backend/tests/unit/users/: test_dependencies.py
frontend/: .gitignore  Dockerfile  README.md  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/i18n/: en.json  fr.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/api/: api.models.ts  chat.service.ts  deep-analysis.service.ts  index.ts  repo.service.ts  repo.store.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.interceptor.ts  auth.models.ts  index.ts  user.service.ts
frontend/src/app/core/i18n/: index.ts  language.service.ts
frontend/src/app/features/analysis/: analysis-action.service.ts  analysis.html  analysis.scss  analysis.ts
frontend/src/app/features/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
frontend/src/app/features/design/: design.html  design.scss  design.ts
frontend/src/app/features/import/: import-project.html  import-project.scss  import-project.ts
frontend/src/app/features/project/: language-meta.ts  project.ts  (+2 more)
frontend/src/app/shared/: _markdown.scss  breadcrumb.service.ts  markdown.pipe.ts  mermaid.directive.ts  time-ago.ts
frontend/src/design-system/: index.ts
frontend/src/design-system/button/: button.ts
frontend/src/design-system/dropzone/: dropzone.ts
frontend/src/design-system/input/: input.ts
frontend/src/design-system/spinner/: spinner.ts
frontend/src/design-system/styles/: base.css  design-system.css  foundation.css  shadows.css  token.css  typography.css
worker/: .dockerignore  .env.example  .funcignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  function_app.py  host.json  pyproject.toml
worker/app/api/: router.py
worker/app/core/: blob_storage.py  config.py  database.py  language.py  language_enum.py  logger.py
worker/app/docs/: config.py  models.py  prompts.py  service.py
worker/app/graphs/: models.py
worker/app/graphs/service/: __init__.py  persistence.py  registry.py
worker/app/graphs/service/ast_parser/: __init__.py  base.py  java.py
worker/app/graphs/service/cfg_builder/: __init__.py  base.py  java.py
worker/app/graphs/service/dfg_builder/: __init__.py  base.py  java.py
worker/app/graphs/service/symbol_table_builder/: base.py  java.py
worker/app/healthz/: schemas.py  triggers.py
worker/app/languages/: schemas.py  triggers.py
worker/app/pipeline/: activities.py  config.py  models.py  orchestrators.py  schemas.py  service.py  triggers.py  utils.py
worker/app/purge/: service.py  triggers.py
worker/app/rag/: config.py  service.py  utils.py  vectorstore.py
worker/app/repos/: models.py  service.py
(+32 files in other folders)
