[project]
name = "retro-doc-backend"
version = "0.1.0"
description = "Backend of the retro-doc project."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "azure-identity>=1.25.2",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.28.0",
    "beanie>=2.0.1",
    "cryptography>=46.0.5",
    "deepagents>=0.6.1",
    "fastapi[standard]==0.135.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.4.1",
    "langchain-azure-ai>=1.1.1",
    "langchain-mistralai>=1.1.1",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "loguru>=0.7.3",
    "markdown-pdf>=1.13.1",
    "pyjwt>=2.11.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.2",
    "mypy>=1.19.1",
    "prek>=0.4.4",
    "pysentry-rs>=0.4.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.14",
    "yamlfix>=1.19.1",
]

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/core/blob_storage.py",
    "app/core/database.py",
    "app/core/logger.py",
    "app/chat/llm.py",
    "app/chat/vectorstore.py",
    "app/deep_analysis/llm.py",
]
source = ["app"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B106"]

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["misc"]
disallow_any_generics = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pysentry.ignore]
ids = ["PYSEC-2025-183"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "D:MONGODB_CONNECTION_STR=mongodb://localhost:27017/test",
    "D:BLOB_STORAGE_ACCOUNT_URL=https://fake.blob.core.windows.net",
    "D:OIDC_AUDIENCE=test-audience",
    "D:OIDC_ALLOWED_ISSUERS=[\"https://fake-issuer.example.com\"]",
    "D:OIDC_JWKS_URL=https://fake-issuer.example.com/.well-known/jwks.json",
    "D:DURABLE_FUNCTIONS_BASE_URL=https://fake-durable.example.com",
    "D:CHAT_MODEL_BASE_URL=https://fake-chat.example.com",
    "D:CHAT_MODEL_API_KEY=fake-chat-key",
    "D:AZURE_AI_SEARCH_ENDPOINT=https://fake-search.example.com",
    "D:AZURE_AI_SEARCH_API_KEY=fake-search-key",
    "D:EMBEDDING_MODEL_ENDPOINT=https://fake-embedding.example.com",
    "D:EMBEDDING_MODEL_API_KEY=fake-embedding-key",
]

[tool.ruff.lint]
select = ["I","F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.yamlfix]  
comments_min_spaces_from_content = 1
explicit_start = false
section_whitelines = 1
sequence_style = "keep_style"
